--- a/Data/CondominiumCoOwnersSystem.Data/appsettings.json
+++ b/Data/CondominiumCoOwnersSystem.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CondominiumCoOwnersSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=CondominiumCoOwnersSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
