--- a/Web/CondominiumCoOwnersSystem.Web/appsettings.json
+++ b/Web/CondominiumCoOwnersSystem.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CondominiumCoOwnersSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=CondominiumCoOwnersSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
