Changed entities and adding database.

--- a/Data/CondominiumCoOwnersSystem.Data/CondominiumCoOwnersSystem.Data.csproj
+++ b/Data/CondominiumCoOwnersSystem.Data/CondominiumCoOwnersSystem.Data.csproj
@@ -11,6 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200309171241_ChangeMontlyServiceFeeRelation.cs" />
+    <Compile Remove="Migrations\20200309171241_ChangeMontlyServiceFeeRelation.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
 
