--- a/Data/CondominiumCoOwnersSystem.Data/CondominiumCoOwnersSystem.Data.csproj
+++ b/Data/CondominiumCoOwnersSystem.Data/CondominiumCoOwnersSystem.Data.csproj
@@ -15,6 +15,8 @@
     <Compile Remove="Migrations\20200309171241_ChangeMontlyServiceFeeRelation.Designer.cs" />
     <Compile Remove="Migrations\20200310112529_changedColumnAdressInBuildigTableAndAddingCityTable.cs" />
     <Compile Remove="Migrations\20200310112529_changedColumnAdressInBuildigTableAndAddingCityTable.Designer.cs" />
+    <Compile Remove="Migrations\20200323152014_xx.cs" />
+    <Compile Remove="Migrations\20200323152014_xx.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
