--- a/Web/CondominiumCoOwnersSystem.Web/appsettings.Development.json
+++ b/Web/CondominiumCoOwnersSystem.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "GoogleReCaptcha": {
+    "Key": "6LfUd-AUAAAAAMngqQeiDeSC4WShnFFhuW6beREb",
+    "Secret": "6LfUd-AUAAAAANFWDXpNBSEMqULmqxqLlwziYEZ5"
   }
 }
